[package]
name = "crypt"
version = "0.1.0"
authors = ["David Goldstein <goldstein.g.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
hex-literal = "0.3.4"
rand = "0.8.5"
byteorder = "1.4.3"
bcrypt = "0.14.0"
