[package]
name = "db"
version = "0.1.0"
authors = ["David Goldstein <goldstein.g.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "extras"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
config = "0.13.3"
serde_derive = "^1.0.158"
serde = "^1.0.158"
ipnetwork = "0.20.0"
eui48 = "1.1.0"
itertools = "0.10.5"
